Fix dialog title alignment on mobile
Bug: T227040

--- a/src/themes/wikimediaui/windows.less
+++ b/src/themes/wikimediaui/windows.less
@@ -274,6 +274,7 @@
 			}
 
 			&-location {
+				margin-left: 1em;
 				text-align: left;
 			}
 
